[gd_scene load_steps=7 format=4 uid="uid://ll5uxw7x1gbj"]

[ext_resource type="Script" uid="uid://bha4mm7tfhkqy" path="res://entities/objects/torchy/ring_of_fire.gd" id="1_6kpsv"]
[ext_resource type="Shader" uid="uid://d18pvdjb2gpej" path="res://entities/objects/torchy/ring_of_fire_shader.tres" id="2_6kpsv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cuhaj"]
render_priority = 0
shader = ExtResource("2_6kpsv")
shader_parameter/Fireball_Head_Color = Color(2, 1, 0, 1)

[sub_resource type="ArrayMesh" id="ArrayMesh_56xk6"]
_surfaces = [{
"aabb": AABB(-1.94235, 0, -1.94235, 3.88471, 1.18313, 3.88471),
"format": 34896613377,
"index_count": 384,
"index_data": PackedByteArray("AAABAAIAAABPAAEATwAEAAEAUAAAAAIAFABPAAAAFAAAABUAFQAAAFAAEgBPABQAFQBQABYAUAACAAMATwBRAAQAEgBRAE8AUQAHAAQAEABRABIAUQAGAAcAEAAGAFEABgAIAAcADwAGABAABgBSAAgADwBSAAYAUgANAAgAEQBSAA8AUgAMAA0AEQAMAFIADAAOAA0AEwAMABEADABTAA4AEwBTAAwAUwAcAA4AGwBTABMAUwAaABwAGwAaAFMAGgAeABwAHQAaABsAGgBUAB4AHQBUABoAVAAhAB4AIABUAB0AVAAfACEAIAAfAFQAHwAjACEAIgAfACAAHwBVACMAIgBVAB8AVQAmACMAJQBVACIAVQAkACYAJQAkAFUAJAAoACYAJwAkACUAJABWACgAJwBWACQAVgArACgAKgBWACcAVgApACsAKgApAFYAKQAtACsALAApACoAKQBXAC0ALABXACkAVwAwAC0ALwBXACwAVwAuADAALwAuAFcALgAyADAAMQAuAC8ALgBYADIAMQBYAC4AWAA1ADIANABYADEAWAAzADUANAAzAFgAMwA3ADUANgAzADQAMwBZADcANgBZADMAWQA6ADcAOQBZADYAWQA4ADoAOQA4AFkAOAA8ADoAOwA4ADkAOABaADwAOwBaADgAWgA/ADwAPgBaADsAWgA9AD8APgA9AFoAPQBBAD8AQAA9AD4APQBbAEEAQABbAD0AWwBEAEEAQwBbAEAAWwBCAEQAQwBCAFsAQgBGAEQARQBCAEMAQgBcAEYARQBcAEIAXABJAEYASABcAEUAXABHAEkASABHAFwARwBLAEkASgBHAEgARwBdAEsASgBdAEcAXQBOAEsATQBdAEoAXQBMAE4ATQBMAF0ATAALAE4AGQBMAE0ATABeAAsAGQBeAEwAXgAKAAsAGABeABkAXgAJAAoAGAAJAF4ACQAFAAoAFwAJABgACQBfAAUAFwBfAAkAXwADAAUAFgBfABcAXwBQAAMAFgBQAF8A"),
"lods": [0.0794325, PackedByteArray("AAABAAIAAAACAAMAAAAEAAEAAAADAAUAAAAGAAQABgAHAAQABgAIAAcACQAAAAUACQAFAAoACQAKAAsABgAMAAgADAANAAgADAAOAA0ADwAMAAYADwAGABAAEQAMAA8AEAAGABIAEgAGAAAAEwAMABEAEgAAABQAFAAAABUAFQAAABYAFgAAABcAFwAAAAkAFwAJABgAGAAJABkAEwAaAAwADAAaAA4AGwAaABMAGgAcAA4AHQAaABsAGgAeABwAHQAfABoAGgAfAB4AIAAfAB0AHwAhAB4AIgAfACAAHwAjACEAIgAkAB8AHwAkACMAJQAkACIAJAAmACMAJwAkACUAJAAoACYAJwApACQAJAApACgAKgApACcAKQArACgALAApACoAKQAtACsALAAuACkAKQAuAC0ALwAuACwALgAwAC0AMQAuAC8ALgAyADAAMQAzAC4ALgAzADIANAAzADEAMwA1ADIANgAzADQAMwA3ADUANgA4ADMAMwA4ADcAOQA4ADYAOAA6ADcAOwA4ADkAOAA8ADoAOwA9ADgAOAA9ADwAPgA9ADsAPQA/ADwAQAA9AD4APQBBAD8AQABCAD0APQBCAEEAQwBCAEAAQgBEAEEARQBCAEMAQgBGAEQARQBHAEIAQgBHAEYASABHAEUARwBJAEYASgBHAEgARwBLAEkASgBMAEcARwBMAEsATQBMAEoATABOAEsAGQBMAE0ATAALAE4AGQAJAEwATAAJAAsA")],
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 96,
"vertex_data": PackedByteArray("/38AAAAAAAD4mP//dQIAAP9//BEAAAAABmf//3UCAAD7sPwRvgkAAANP/BG+CQAAHMcAAJIVAAAcx///khUAAIHa/BF9JQAA4jgAAJIVAADiOP//khUAAH0l/BF9JQAAbOoAAOI4AABs6v//4jgAAED2/BEDTwAAlsgAAGg3AAAHuQAApCoAAFrVAAD3RgAASKcAACghAADW3gAAtlgAAAaUAABQGwAA/38AAFcZAAD4awAAUBsAALZYAAAoIQAA90YAAKQqAABoNwAAaDcAAIn9AAAGZwAAruQAAPhrAACJ/f//BmcAAKfmAAD/fwAA///8Ef9/AACJ/QAA+JgAAK7kAAAGlAAAif3///iYAADW3gAASKcAAED2/BH7sAAAbOoAABzHAABa1QAAB7kAAGzq//8cxwAAlsgAAJbIAACB2vwRgdoAABzHAABs6gAAB7kAAFrVAAAcx///bOoAAEinAADW3gAA+7D8EUD2AAD4mAAAif0AAAaUAACu5AAA+Jj//4n9AAD/fwAAp+YAAP9//BH//wAABmcAAIn9AAD4awAAruQAAAZn//+J/QAAtlgAANbeAAADT/wRQPYAAOI4AABs6gAA90YAAFrVAADiOP//bOoAAGg3AACWyAAAfSX8EYHaAACSFQAAHMcAAKQqAAAHuQAAkhX//xzHAAAoIQAASKcAAL4J/BH7sAAAdQIAAPiYAABQGwAABpQAAHUC///4mAAAVxkAAP9/AAAAAPwR/38AAHUCAAAGZwAAUBsAAPhrAAB1Av//BmcAACghAAC2WAAAvgn8EQNPAACSFQAA4jgAAKQqAAD3RgAAkhX//+I4AAD4mAAAdQIAAAZnAAB1AgAA+7AAAL4JAACB2gAAfSUAAED2AAADTwAA//8AAP9/AABA9gAA+7AAAIHaAACB2gAA+7AAAED2AAD/fwAA//8AAANPAABA9gAAfSUAAIHaAAC+CQAA+7AAAAAAAAD/fwAAvgkAAANPAAB9JQAAfSUAAANPAAC+CQAA")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_84dxj"]
resource_name = "ring_of_fire_Cylinder"
_surfaces = [{
"aabb": AABB(-1.94235, 0, -1.94235, 3.88471, 1.18313, 3.88471),
"attribute_data": PackedByteArray("////f//3AAD//wAA/+8AAP/n/3//5wAA/98AAP/X/3//1wAA/88AAP/H/3//xwAA/78AAP+3/3//twAA/68AAP+n/3//pwAA/58AAP+X/3//lwAA/48AAP+H/3//hwAA/38AAP93/3//dwAA/28AAP9n/3//ZwAA/18AAP9X/3//VwAA/08AAP9H/3//RwAA/z8AAP83/3//NwAA/y8AAP8n/3//JwAA/x8AAP8X/3//FwAA/w8AAAAA/3//BwAAAAAAAJzJq4//v46C/7+5jmK2q4/a0nmSI615kiHi6YzdnemMX9sGl5+kBpfW4iedJ50nnRTz3Z3pjN2d9+ifpAaXn6SF7SOteZIjrUH8ArS9gwK0U/BitquPYrZF8f+/uY7/v0H8+8u9g/vLU/CcyauPnMmF7drSeZLa0hTzIeLpjCHi9+hf2waXX9vW4tbiJ53W4iHiFPPdnRTzX9v36J+k9+ja0oXtI62F7fvLQfwCtEH8nMlT8GK2U/D/v0Xx//f/f//v/3//3/9//8//f/+//3//r/9//5//f/+P/3//f/9//2//f/9f/3//T/9//z//f/8v/3//H/9//w//f/8H/38CtL2D+8u9g3yoPIeC1zyHjZSNlHDrjZQ8h3yowvh8qI6C/79v/f+/PIeC18L4gteNlHDrcOtw63yowviC18L4/79v/Q=="),
"format": 34896613399,
"index_count": 384,
"index_data": PackedByteArray("AAABAAIAAABgAAEAYAADAAEAYABhAAMAYQAFAAMAYQAEAAUABAAGAAUABABiAAYAYgAIAAYAYgAHAAgABwAJAAgABwBjAAkAYwALAAkAYwAKAAsACgAMAAsACgBkAAwAZAAOAAwAZAANAA4ADQAPAA4ADQBlAA8AZQARAA8AZQAQABEAEAASABEAEABmABIAZgAUABIAZgATABQAEwAVABQAEwBnABUAZwAXABUAZwAWABcAFgAYABcAFgBoABgAaAAaABgAaAAZABoAGQAbABoAGQBpABsAaQAdABsAaQAcAB0AHAAeAB0AHABqAB4AagAgAB4AagAfACAAHwAhACAAHwBrACEAawAjACEAawAiACMAIgAkACMAIgBsACQAbAAmACQAbAAlACYAJQAnACYAJQBtACcAbQApACcAbQAoACkAKAAqACkAKABuACoAbgAsACoAbgArACwAKwAtACwAKwBvAC0AbwAvAC0AbwBwAC8AcAAwAC8AcAAuADAAMQAyADMAMwAyAHEAMQByADIAMwBxADQANQByADEANABxAHMANQB0AHIANABzADYAOQB0ADUANgBzADgAOQA3AHQANgA4ADoAOwA3ADkAOgA4AHUAOwB2ADcAOgB1ADwAPwB2ADsAPAB1AD4APwA9AHYAPAA+AEAAQQA9AD8AQAA+AHcAQQB4AD0AQAB3AEIARQB4AEEAQgB3AEQARQBDAHgAQgBEAEYARwBDAEUARgBEAHkARwB6AEMARgB5AEgASwB6AEcASAB5AEoASwBJAHoASABKAEwATQBJAEsATABKAHsATQB8AEkATAB7AE4AUQB8AE0ATgB7AFAAUQBPAHwATgBQAFIAUwBPAFEAUgBQAH0AUwB+AE8AUgB9AFQAVwB+AFMAVAB9AFYAVwBVAH4AVABWAFgAWQBVAFcAWABWAH8AWQCAAFUAWAB/AFoAXQCAAFkAWgB/AFwAXQBbAIAAWgBcAF4AXwBbAF0AXgBcAIEAXwCBAFsAXgCBAF8A"),
"lods": [0.0794325, PackedByteArray("AAABAAIAAAADAAEAAAAEAAMABAAFAAMABAAGAAUABAAHAAYABwAIAAYABwAJAAgABwAKAAkACgALAAkACgAMAAsACgANAAwADQAOAAwADQAPAA4ADQAQAA8AEAARAA8AEAASABEAEAATABIAEwAUABIAEwAVABQAEwAWABUAFgAXABUAFgAYABcAFgAZABgAGQAaABgAGQAbABoAGQAcABsAHAAdABsAHAAeAB0AHAAfAB4AHwAgAB4AHwAhACAAHwAiACEAIgAjACEAIgAkACMAIgAlACQAJQAmACQAJQAnACYAJQAoACcAKAApACcAKAAqACkAKAArACoAKwAsACoAKwAtACwAKwAuAC0ALgAvAC0ALgAwAC8AMQAyADMAMwAyADQANQAyADEANAAyADYANQA3ADIANgAyADgAOQA3ADUANgA4ADoAOwA3ADkAOgA4ADwAOwA9ADcAPAA4AD4APwA9ADsAPAA+AEAAQQA9AD8AQAA+AEIAQQBDAD0AQgA+AEQARQBDAEEAQgBEAEYARwBDAEUARgBEAEgARwBJAEMASABEAEoASwBJAEcASABKAEwATQBJAEsATABKAE4ATQBPAEkATgBKAFAAUQBPAE0ATgBQAFIAUwBPAFEAUgBQAFQAUwBVAE8AVABQAFYAVwBVAFMAVABWAFgAWQBVAFcAWABWAFoAWQBbAFUAWgBWAFwAXQBbAFkAWgBcAF4AXwBbAF0AXwBcAFsAXgBcAF8A")],
"material": SubResource("ShaderMaterial_cuhaj"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 130,
"vertex_data": PackedByteArray("/38AAAAA0Pz4mP//dQJb+P9//BEAAP//+7D8Eb4JYfAcxwAAkhU/4xzH//+SFRzpgdr8EX0ly+Bs6gAA4jgW1Wzq///iOPPZQPb8EQNPSNGJ/QAABmdfx4n9//8GZ/nK///8Ef9/6cGJ/QAA+Jh3uon9///4mFi8QPb8Efuw0rJs6gAAHMcWr2zq//8cx2uugdr8EYHaY6QcxwAAbOqmphzH//9s6hmi+7D8EUD215f4mAAAif1Xo/iY//+J/dGZ/3/8Ef//y5EGZwAAif2FpgZn//+J/dGZA0/8EUD215fiOAAAbOrgruI4//9s6hmifSX8EYHaY6SSFQAAHMc1upIV//8cx2uuvgn8Efuw0rJ1AgAA+JgXx3UC///4mFi8AAD8Ef9/6cF1AgAABmfL1HUC//8GZ/nKvgn8EQNPSNGSFQAA4jjz4pIV///iOPPZfSX8EX0ly+DiOAAAkhVX8eI4//+SFRzpA0/8Eb4JYfD/fwAAAAD7/gZn//91Alv4/3/8EQAA//8GlAAAUBv/P/9/AAAAAMge/38AAFcZ/z/4awAAUBv/P0inAAAoIf8/tlgAACgh/z8cxwAAkhW+IeI4AACSFb4hB7kAAKQq/z/3RgAApCr/P5bIAABoN/8/aDcAAGg3/z9s6gAA4jjfJ5IVAADiON8nWtUAAPdG/z+kKgAA90b/P9beAAC2WP8/KCEAALZY/z+J/QAABmehMnUCAAAGZ6EyruQAAPhr/z9QGwAA+Gv/P6fmAAD/f/8/VxkAAP9//z+J/QAA+JjqQHUCAAD4mOpAruQAAAaU/z9QGwAABpT/P9beAABIp/8/KCEAAEin/z9s6gAAHMfATpIVAAAcx8BOWtUAAAe5/z+kKgAAB7n/P5bIAACWyP8/aDcAAJbI/z8cxwAAbOq/WeI4AABs6r9ZB7kAAFrV/z/3RgAAWtX/P0inAADW3v8/tlgAANbe/z/4mAAAif1PYAZnAACJ/U9gBpQAAK7k/z/4awAAruT/P/9/AACn5v8/+JgAAHUCpfH7sAAAvgkw84HaAAB9JWzkQPYAAANP1tX//wAA/3+Yx0D2AAD7sP25gdoAAIHaoK37sAAAQPbco/9/AAD//z6fA08AAED29aF9JQAAgdqeqr4JAAD7sHS2AAAAAP9/zcO+CQAAA0/o0X0lAAB9JWzgA08AAL4JJu8GZwAAdQLY/wZnAAB1Ahgf+JgAAHUCGB8DTwAAvgkOIPuwAAC+CQ4gfSUAAH0lSiSB2gAAfSVKJL4JAAADT6UsQPYAAANPpSwAAAAA/3+ROf//AAD/f5E5vgkAAPuwGEhA9gAA+7AYSH0lAACB2q9UgdoAAIHar1QDTwAAQPa5XfuwAABA9rld/38AAP//NmElVe72YV+wHbZKtspvluYa72MFNQ5bWByelZMeIF1TN55W9hq6lJUi2VQgOrJRbhmrk1gnm0nuPbZLkRdGkqItUTi2Q5dDChUokC03GiFHS8I2CxEmjD1JawDvVZ8c6Qj/f/9/Wh3Vx1/jFffYc8G2Gy/r2TzJ8+7Wb9HIsDu95me89Oq4bVzSvUX78Ei0behTbKbYkU75+UyukOZEa2ndWayK/V+pCOVgamvhy65S9vCkpuOPaRjleVn6/J2gTeIOoPDfAAD/fwAA/38AAP9/AAD/fwAA/38AAP9/Vgn3YQceVYkAAP9/AAD/fwAA/38AAP9/GxCwU04sG5AAAP9/AAD/fwAA/38AAP9/1hinSFc31ZgAAP9/AAD/fwAA/38AAP9/GiIgQt49GqIAAP9/AAD/fwAA/38AAP9/LydtQpI9L6cAAP9/AAD/fwAA/38AAP9/riM3TMczraMAAP9/AAD/fwAA/38AAP9/LRKBZn0ZLJIAAP9/AAD/fwAA/38OavMy+X7TJeh3kCu8cGQx12jNN1xfgT+tUtBJCz/EWZMYBHkYJY6njDYvxBZA1dOARlvebktx5qBPU+2CU7Pz7bAG8KULVoNXA1p0fBVahloGg2qUJYWMhQxrWkMyOJQ5FLtNUDunnagdrkS2PnqleyVJQR06v6a/JuJFiCk/nUAddlYAAP9/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_56xk6")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_cuhaj"]
height = 1.0
radius = 1.8

[node name="RingOfFire" type="Node3D"]
script = ExtResource("1_6kpsv")
metadata/_custom_type_script = "uid://b2o2mroicva81"

[node name="Model" type="Node3D" parent="."]

[node name="Cylinder" type="MeshInstance3D" parent="Model"]
mesh = SubResource("ArrayMesh_84dxj")
skeleton = NodePath("")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_cuhaj")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
